# packa

./: makefile  pyproject.toml  readme.md
packa/: __main__.py
