[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "packa"
version = "0.0.1"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "db connect query"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "packb @ https://github.com/numlims/packb/archive/refs/tags/v0.0.1.zip",
  "packc @ https://github.com/numlims/packc/archive/refs/tags/v0.0.1.zip"
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.scripts]
packa = "packa:__main__"

[tool.setuptools]
packages = ["packa"]